--- a/.github/workflows/sast-and-package.yml
+++ b/.github/workflows/sast-and-package.yml
@@ -90,6 +90,6 @@ jobs:
     - name: Upload WAR file as artifact
       uses: actions/upload-artifact@v2 
       with:
-        name: Inventory-UI
-        path: target/inventory-ui-v1.0.war 
+        name: MMU-UI
+        path: target/mmuui-v1.0.war 
         
